# Jellyfin-Mini-Tools

./: README.md  qb_add_torrent.py
JellyFindPlugin/Plugin/: Plugin.cs
JellyFindPlugin/Plugin/Configuration/: PluginConfiguration.cs  configPage.html
JellyFindPlugin/Plugin/JellyFind/: JellyFind.sln
JellyFindPlugin/Plugin/JellyFind/JellyFind/: JellyFind.csproj  Plugin.cs
JellyFindPlugin/Plugin/JellyFind/JellyFind/Configuration/: PluginConfiguration.cs  configPage.html
JellyFindPlugin/backend/: Cargo.toml  cert.pem  key.pem
JellyFindPlugin/backend/src/: api.rs  download.rs  main.rs  models.rs  search.rs  search_ygg.rs
Missing-Trickplay/: Cargo.toml
Missing-Trickplay/src/: main.rs
Movies-Renamer/: Cargo.toml
Movies-Renamer/src/: main.rs
QB-Add-Torrent/: Cargo.toml
QB-Add-Torrent/src/: main.rs
Size-check/: Cargo.toml  ReadMe.md
Size-check/Example/: output.json  test.txt
Size-check/src/: main.rs
Torrent-Relinker/: Cargo.toml
Torrent-Relinker/Example/: anime.json  films.json  series.json  unmatched_anime.json  unmatched_films.json
Torrent-Relinker/src/: main.rs
